tests/spec/compile-pass/006_interface_dispatch.zn
// category: compile-pass
// profile: freestanding
// purpose: interface-typed parameters are anonymous static generic parameters

module tests.pass.staticInterfaceParameter;

import core.result.Result;

enum WriteError {
    Failed,
}

interface Writer {
    fn write(mut self, bytes: ArraySlice<U8>) -> Result<USize, WriteError>;
}

fn writeInterface(mut writer: Writer, bytes: ArraySlice<U8>) -> Result<USize, WriteError> {
    return writer.write(bytes);
}
